=== 1.5.7 / 2009-11-08

* Add a Prefix middleware that prefixes tracker names

=== 1.5.6 / 2009-11-08

* Rerelase of 1.5.5 without the huge binary blob in the middle
* Interpret Shake NSplines as Linear instead of discarding them

=== 1.5.4 / 2009-10-25

* Fix a bug in the Shake importer for tracks that have no animation

=== 1.5.3 / 2009-10-17

* Fix a bug in the Nuke importer for tracks that have no animation

=== 1.5.2 / 2009-10-09

* Fix Windows-specific issue (Tempfile-related) in the Equalizer4 exporter
* Add Export::Base#just_export and Middleware::Base#just_export

=== 1.5.0 / 2009-10-09

* Implement support for older 3DE exports (in and out)

=== 1.4.0 / 2009-10-02

* Implement MayaLive import and export

=== 1.3.1 / 2009-09-23

* Implement 3DE import and export

=== 1.2.7 / 2009-09-22

* Improved progress reporting

=== 1.2.6 / 2009-09-21

* Add const_name to the classes being introspected most often

=== 1.2.5 / 2009-09-21

* Reset residual on Syntheyes imports to 0

=== 1.2.4 / 2009-09-21

* Write to files in binary mode

=== 1.2.3 / 2009-09-21

* Support both PFTrack 4 and 5 

=== 1.2.1 / 2009-09-21

* Fixed the binary that was not able to properly pass the importer class to the pipeline

=== 1.2.0 / 2009-09-20

* Add experimental MatchMoverPro import and export support
* Rewrite the Shake parser, support MatchMove and Stabilize nodes and many tracks per node
* Officially add and test the Reformat middleware
* Remove the Close middleware and close IOs automatically at pipeline end
* Much improved documentation
* Use IO as base for all the parsers (if a parser needs a string it will have to read by himself)
* Much improved test coverage
* Support Nuke import and export

=== 1.0.0 / 2009-04-19

* Welcome